<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_menu"
    android:orientation="vertical"
    android:layout_marginEnd="@dimen/_12sdp"
    android:paddingVertical="4dp">

    <!-- 1. Play -->
    <TextView
        android:id="@+id/tv_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 2. Ringtone cutter -->
    <TextView
        android:id="@+id/tv_ringtone_cutter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/ringtone_cutter"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 3. Select -->
    <TextView
        android:id="@+id/tv_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/select"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 4. Share -->
    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 5. Add to favorite -->
    <TextView
        android:id="@+id/tv_add_to_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/add_to_favorite"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 6. Add to playlist -->
    <TextView
        android:id="@+id/tv_add_to_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/add_to_playlist"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 7. Move to SafeBox -->
    <TextView
        android:id="@+id/tv_move_to_safebox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/move_to_safebox"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 8. Delete -->
    <TextView
        android:id="@+id/tv_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/rename"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider_7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="12dp"
        android:background="#E5E5E5" />

    <!-- 8. Delete -->
    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:gravity="start|center_vertical"
        android:padding="@dimen/_12sdp"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="14sp" />

</LinearLayout>