<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_radius_16"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton_regular"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:text="@string/create_folder" />
        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_medium"
            android:textColor="#99000E00"
            android:textSize="12sp"
            android:text="@string/create_folder_desc" />

        <EditText
            android:id="@+id/edtInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_search_bar"
            android:fontFamily="@font/outfit_semibold"
            android:hint="@string/enter_folder_name"
            android:maxLines="1"
            android:padding="14dp"
            android:textColor="@color/black"
            android:textColorHint="#99000E00"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvErrorInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_input_failed"
            android:textColor="#E53935"
            android:textSize="12sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_btn_cancel"
                    android:gravity="center"
                    android:paddingVertical="12dp"
                    android:fontFamily="@font/outfit_semibold"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            <TextView
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_create"
                android:gravity="center"
                android:paddingVertical="12dp"
                android:fontFamily="@font/outfit_semibold"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>