<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_popup_menu"
    android:orientation="vertical"
    android:paddingVertical="4dp">

    <TextView
        android:id="@+id/tv_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="@dimen/_12sdp"
        android:layout_gravity="start"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="#33FFFFFF" />

    <TextView
        android:id="@+id/tv_sleep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="@dimen/_12sdp"
        android:layout_gravity="start"
        android:text="@string/sleep_timer"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="#33FFFFFF" />

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="@dimen/_12sdp"
        android:layout_gravity="start"
        android:text="@string/song_detail"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="#33FFFFFF" />

    <TextView
        android:id="@+id/tv_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="@dimen/_12sdp"
        android:layout_gravity="start"
        android:text="@string/go_to_album"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="#33FFFFFF" />

    <TextView
        android:id="@+id/tv_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/outfit_medium"
        android:padding="@dimen/_12sdp"
        android:layout_gravity="start"
        android:text="@string/go_to_artist"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="4dp"
        android:background="#33FFFFFF" />

</LinearLayout>